# app/controllers/user.js
@@ -1,6 +1,6 @@
 const userService = require('../service/user');
 const auth = require('../middleware/helper');
-const { authRegister, authLogin, authForgot } = require('../middleware/validation');
+const { authRegister, authLogin, forgotPasswordValidation, resetPasswordValidation } = require('../middleware/validation');
 const logger = require('../../config/loggers');
 /**
  * @description    : This class has two methods to create and login of user
@@ -99,7 +99,7 @@ class Controller {
       {
         email: req.body.email
       };
-      const forgotValidation = authForgot.validate(userData);
+      const forgotValidation = forgotPasswordValidation.validate(userData);
       if (forgotValidation.error) {
         res.status(400).json({
           success: false,
@@ -133,37 +133,37 @@ class Controller {
     }
   }
 
-  // resetPassword (req, res) {
-  //   try {
-  //     const userCredential = {
-  //       token: req.headers.token,
-  //       password: req.body.password
-  //     };
-  //     userService.resetPassword(userCredential, (error, result) => {
-  //       if (error) {
-  //         logger.error('Error while resetting the password', error);
-  //         res.status(400).send({
-  //           success: false,
-  //           message: 'failed reset the password',
-  //           error
-  //         });
-  //       } else {
-  //         logger.info('Password reset successfully', result);
-  //         res.status(200).send({
-  //           success: true,
-  //           message: 'password changed successfully',
-  //           result: result
-  //         });
-  //       }
-  //     });
-  //   } catch (err) {
-  //     logger.error('Error while resetting the password', err);
-  //     return res.status(401).send({
-  //       success: false,
-  //       message: 'Token expired or invalid token'
-  //     });
-  //   }
-  // }
+  resetPassword (req, res) {
+    try {
+      const passwordValidation = resetPasswordValidation.validate(req.body);
+      if (passwordValidation.error) {
+        res.status(400).send({ message: passwordValidation.error.details[0].message });
+      }
+
+      const userData = {
+        token: req.headers.token,
+        password: req.body.password
+      };
+      userService.passwordReset(userData, (error, data) => {
+        return ((error)
+          ? res.status(401).send({
+            sucess: false,
+            message: error
+          })
+          : res.status(200).send({
+            success: true,
+            message: 'Your password has been reset successfully!!',
+            data: data
+          }));
+      });
+    } catch (error) {
+      return res.status(500).send({
+        sucess: false,
+        message: error.message
+
+      });
+    }
+  }
 }
 
 // exporting the class
