# swagger/swagger.json
@@ -70,35 +70,99 @@
                     }
                 }    
             }
-        },
-        "definitions": {
-            "User": {
-              "type":"object",
-              "properties": {
-                "firstName": {
-                  "type": "string"
-                },
-                "lastName": {
-                  "type": "string"
-                },
-                "email": {
-                  "type": "string"
-                },
-                "password": {
-                  "type": "string"
-                    }
-                }
-            },
-            "LoginUser":{
-                "type":"object",
-                "properties": {
-                    "email": {
-                        "type": "string"
-                      },
-                      "password": {
-                        "type": "string"
+        },  
+        "/forgot-passowrd": {
+            "post": {
+                "tags": [
+                    "FundooNotes forgotPassword"
+                ],
+                "Summary": "user receives an email about link to reset password",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "body",
+                        "schema": 
+                        {
+                            "$ref": "#/definitions/forgotPassword"
                         }
+                    }        
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Error"
                     }
                 }
             }
-        }
+        },
+        "/reset-passowrd": {
+            "put": {
+                "tags": [
+                    "FundooNotes resetPassword"
+                ],
+                "Summarry": "reset password",
+                "parameters": [
+                    {
+                        "name": "resetPassword",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/resetPassword"
+                        }
+                    },
+                    {
+                        "name": "token",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful"
+                    },
+                    "401": {
+                        "description": "Unauthorized User"
+                    },
+                    "500": {
+                        "description": "Internal Error"
+                    }
+                }
+            }
+        },
+        "definitions": {
+          "User": {
+            "type":"object",
+            "properties": {
+              "firstName": {
+                "type": "string"
+              },
+              "lastName": {
+                "type": "string"
+              },
+              "email": {
+                "type": "string"
+              },
+              "password": {
+                "type": "string"
+                  }
+              }
+          },
+          "LoginUser":{
+              "type":"object",
+              "properties": {
+                  "email": {
+                      "type": "string"
+                    },
+                    "password": {
+                      "type": "string"
+                      }
+                  }
+              }
+          }
+      }
